# gai-ttt-svr

./: .gitignore  Dockerfile  Dockerfile copy  Dockerfile.new  README.md  docker-compose.yml  environment.yml  pyproject.toml  pyproject.toml.docker  requirements.txt  startup.sh
.devcontainer/: Dockerfile  Dockerfile copy.devcontainer  Dockerfile.devcontainer  TODO.txt  devcontainer copy.json  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.devcontainer/library-scripts/: python-debian.sh
docs/: gai-ttt-exllamav2-dolphin.ipynb  gai-ttt-exllamav2-mistral7b.ipynb  gai-ttt-exllamav2.ipynb  gai-ttt-llamacpp-dolphin.ipynb  gai-ttt-llamacpp-mistral7b.ipynb  gai-ttt-ollama-llama3.ipynb
src/gai/ttt/server/: gai_exllamav2.py  gai_llamacpp.py
src/gai/ttt/server/api/: dependencies.obsolete.py  gai.yml  main.obsolete.py  main.py  self-test.py
src/gai/ttt/server/builders/: output_chunk_builder.py  output_message_builder.py
src/gai/ttt/server/config/: config_utils.py  gai.yml  server_config_utils.py  ttt_config.py
src/gai/ttt/server/config/pydantic/: ttt_config.py
tests/integration_tests/: hit_api copy.py  hit_api.py  queue_api_server copy.py  queue_api_server.py  smoke_test.ipynb
tests/integrationtest/: gai-ttt.ipynb  print_delta.py
tests/unittest/: completions_factory_test.py  gai_exllamav2_test.py
tests/unittest/gai/ttt/server/config/: config_test.py  sample.yml
wheels/: llama_cpp_python-0.2.78-cp310-cp310-linux_x86_64.whl
