[build-system]
requires = [ "setuptools>=42", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "gai-ttt-svr-exllamav2"
version = "1.0.2"
description = "Refer to https://gai-labs.github.io/gai for more information"
readme = "README.md"
classifiers = [ "Programming Language :: Python :: 3.10", "Development Status :: 3 - Alpha", "License :: OSI Approved :: MIT License", "Intended Audience :: Science/Research", "Intended Audience :: Developers", "Operating System :: OS Independent", "Topic :: Software Development", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Scientific/Engineering :: Artificial Intelligence",]
requires-python = ">=3.10"
dependencies = [ "numpy==1.26.4", "toml==0.10.2", "tokenizers==0.20.0", "uvicorn==0.30.6", "jsonschema>=4.23.0", "gai-sdk>=0.261",]
[[project.authors]]
name = "kakkoii1337"
email = "kakkoii1337@gmail.com"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [ "pytest", "nox", "twine", "keyrings.alt", "ipykernel", "flake8", "pytest-ordering",]

[project.urls]
documentation = "https://gai-labs.github.io/gai/docs"
